--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-    "ownerNumber": "6285158549166@s.whatsapp.net",
-    "ownerName": "aqulzz",
+    "ownerNumber": "6289509548660@s.whatsapp.net",
+    "ownerName": "WizardGanzz",
     "limitCount": 30,
     "gamewaktu": 60,
-    "botName": "Xinz Bot",
+    "botName": "Wizard Bot",
     "pathImg": "./media/Itsuki.jpg",
     "lolkey": "YOUR_APIKEY",
     "sesidInsta": "default",
     "sessionName": "aqulzz",
-    "txtDonasi": "GOPAY : 085157226383\nTrakteer : https://trakteer.id/aqulzz\nSaweeria : https://saweria.co/aqulzz\nPulsa : 085157226383",
+    "txtDonasi": "GOPAY : 089509548660\nTrakteer : https://trakteer.id/aqulzz\nSaweeria : https://saweria.co/aqulzz\nPulsa : 085157226383",
     "gcount": {
         "prem": 40,
         "user": 20
